Removed Java 21 Enable Preview setting and Gradle build.